[tool.poetry]
name = "fitrate"
version = "0.1.0"
description = "Calculate the length of the sides that fit into the maximum volume"
authors = ["suzukey <suzukei0208@gmail.com>"]

readme = 'README.md'

repository = "https://github.com/suzukey/fitlate"
homepage = "https://github.com/suzukey/fitlate"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
