[tool.poetry]
name = "fitrate"
version = "0.1.0"
description = "Calculate the length of the sides that fit into the maximum volume"
authors = ["suzukey <suzukei0208@gmail.com>"]

readme = 'README.md'

repository = "https://github.com/suzukey/fitlate"
homepage = "https://github.com/suzukey/fitlate"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.3"
isort = "^5.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']

[tool.isort]
include_trailing_comma = true
line_length = 80
multi_line_output = 3
